@@ -16,23 +16,24 @@
  */
 package org.apache.commons.lang3;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.lessThanOrEqualTo;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Modifier;
 import java.nio.charset.Charset;
 import java.util.Random;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 /**
  * Unit tests {@link org.apache.commons.lang3.RandomStringUtils}.
@@ -57,163 +58,129 @@ public class RandomStringUtilsTest {
     @Test
     public void testRandomStringUtils() {
         String r1 = RandomStringUtils.random(50);
-        assertEquals("random(50) length", 50, r1.length());
+        assertEquals(50, r1.length(), "random(50) length");
         String r2 = RandomStringUtils.random(50);
-        assertEquals("random(50) length", 50, r2.length());
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertEquals(50, r2.length(), "random(50) length");
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.randomAscii(50);
-        assertEquals("randomAscii(50) length", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("char between 32 and 127", r1.charAt(i) >= 32 && r1.charAt(i) <= 127);
+        assertEquals(50, r1.length(), "randomAscii(50) length");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(r1.charAt(i) >= 32 && r1.charAt(i) <= 127, "char between 32 and 127");
         }
         r2 = RandomStringUtils.randomAscii(50);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.randomAlphabetic(50);
-        assertEquals("randomAlphabetic(50)", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("r1 contains alphabetic", Character.isLetter(r1.charAt(i)) && !Character.isDigit(r1.charAt(i)));
+        assertEquals(50, r1.length(), "randomAlphabetic(50)");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(Character.isLetter(r1.charAt(i)) && !Character.isDigit(r1.charAt(i)), "r1 contains alphabetic");
         }
         r2 = RandomStringUtils.randomAlphabetic(50);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.randomAlphanumeric(50);
-        assertEquals("randomAlphanumeric(50)", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("r1 contains alphanumeric", Character.isLetterOrDigit(r1.charAt(i)));
+        assertEquals(50, r1.length(), "randomAlphanumeric(50)");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(Character.isLetterOrDigit(r1.charAt(i)), "r1 contains alphanumeric");
         }
         r2 = RandomStringUtils.randomAlphabetic(50);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.randomGraph(50);
-        assertEquals("randomGraph(50) length", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("char between 33 and 126", r1.charAt(i) >= 33 && r1.charAt(i) <= 126);
+        assertEquals(50, r1.length(), "randomGraph(50) length");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(r1.charAt(i) >= 33 && r1.charAt(i) <= 126, "char between 33 and 126");
         }
         r2 = RandomStringUtils.randomGraph(50);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.randomNumeric(50);
-        assertEquals("randomNumeric(50)", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("r1 contains numeric", Character.isDigit(r1.charAt(i)) && !Character.isLetter(r1.charAt(i)));
+        assertEquals(50, r1.length(), "randomNumeric(50)");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(Character.isDigit(r1.charAt(i)) && !Character.isLetter(r1.charAt(i)), "r1 contains numeric");
         }
         r2 = RandomStringUtils.randomNumeric(50);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.randomPrint(50);
-        assertEquals("randomPrint(50) length", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("char between 32 and 126", r1.charAt(i) >= 32 && r1.charAt(i) <= 126);
+        assertEquals(50, r1.length(), "randomPrint(50) length");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(r1.charAt(i) >= 32 && r1.charAt(i) <= 126, "char between 32 and 126");
         }
         r2 = RandomStringUtils.randomPrint(50);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         String set = "abcdefg";
         r1 = RandomStringUtils.random(50, set);
-        assertEquals("random(50, \"abcdefg\")", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("random char in set", set.indexOf(r1.charAt(i)) > -1);
+        assertEquals(50, r1.length(), "random(50, \"abcdefg\")");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(set.indexOf(r1.charAt(i)) > -1, "random char in set");
         }
         r2 = RandomStringUtils.random(50, set);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.random(50, (String) null);
-        assertEquals("random(50) length", 50, r1.length());
+        assertEquals(50, r1.length(), "random(50) length");
         r2 = RandomStringUtils.random(50, (String) null);
-        assertEquals("random(50) length", 50, r2.length());
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertEquals(50, r2.length(), "random(50) length");
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         set = "stuvwxyz";
         r1 = RandomStringUtils.random(50, set.toCharArray());
-        assertEquals("random(50, \"stuvwxyz\")", 50, r1.length());
-        for(int i = 0; i < r1.length(); i++) {
-            assertTrue("random char in set", set.indexOf(r1.charAt(i)) > -1);
+        assertEquals(50, r1.length(), "random(50, \"stuvwxyz\")");
+        for (int i = 0; i < r1.length(); i++) {
+            assertTrue(set.indexOf(r1.charAt(i)) > -1, "random char in set");
         }
         r2 = RandomStringUtils.random(50, set);
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         r1 = RandomStringUtils.random(50, (char[]) null);
-        assertEquals("random(50) length", 50, r1.length());
+        assertEquals(50, r1.length(), "random(50) length");
         r2 = RandomStringUtils.random(50, (char[]) null);
-        assertEquals("random(50) length", 50, r2.length());
-        assertTrue("!r1.equals(r2)", !r1.equals(r2));
+        assertEquals(50, r2.length(), "random(50) length");
+        assertTrue(!r1.equals(r2), "!r1.equals(r2)");
 
         final long seed = System.currentTimeMillis();
-        r1 = RandomStringUtils.random(50,0,0,true,true,null,new Random(seed));
-        r2 = RandomStringUtils.random(50,0,0,true,true,null,new Random(seed));
-        assertEquals("r1.equals(r2)", r1, r2);
+        r1 = RandomStringUtils.random(50, 0, 0, true, true, null, new Random(seed));
+        r2 = RandomStringUtils.random(50, 0, 0, true, true, null, new Random(seed));
+        assertEquals(r1, r2, "r1.equals(r2)");
 
         r1 = RandomStringUtils.random(0);
-        assertEquals("random(0).equals(\"\")", "", r1);
+        assertEquals("", r1, "random(0).equals(\"\")");
     }
 
     @Test
     public void testLANG805() {
         final long seed = System.currentTimeMillis();
-        assertEquals("aaa", RandomStringUtils.random(3,0,0,false,false,new char[]{'a'},new Random(seed)));
+        assertEquals("aaa", RandomStringUtils.random(3, 0, 0, false, false, new char[]{'a'}, new Random(seed)));
     }
 
     @Test
     public void testLANG807() {
-        try {
-            RandomStringUtils.random(3,5,5,false,false);
-            fail("Expected IllegalArgumentException");
-        } catch (final IllegalArgumentException ex) { // distinguish from Random#nextInt message
-            final String msg = ex.getMessage();
-            assertTrue("Message (" + msg + ") must contain 'start'", msg.contains("start"));
-            assertTrue("Message (" + msg + ") must contain 'end'", msg.contains("end"));
-        }
+        final IllegalArgumentException ex =
+                assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(3, 5, 5, false, false));
+        final String msg = ex.getMessage();
+        assertTrue(msg.contains("start"), "Message (" + msg + ") must contain 'start'");
+        assertTrue(msg.contains("end"), "Message (" + msg + ") must contain 'end'");
     }
 
     @Test
     public void testExceptions() {
         final char[] DUMMY = new char[]{'a'}; // valid char array
-        try {
-            RandomStringUtils.random(-1);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(-1, true, true);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(-1, DUMMY);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(1, new char[0]); // must not provide empty array => IAE
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(-1, "");
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(-1, (String)null);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(-1, 'a', 'z', false, false);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(-1, 'a', 'z', false, false, DUMMY);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(-1, 'a', 'z', false, false, DUMMY, new Random());
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(8, 32, 48, false, true);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
-        try {
-            RandomStringUtils.random(8, 32, 65, true, false);
-            fail();
-        } catch (final IllegalArgumentException ex) {}
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(-1));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(-1, true, true));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(-1, DUMMY));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(1, new char[0]));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(-1, ""));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(-1, (String) null));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(-1, 'a', 'z', false, false));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(-1, 'a', 'z', false, false, DUMMY));
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> RandomStringUtils.random(-1, 'a', 'z', false, false, DUMMY, new Random()));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(8, 32, 48, false, true));
+        assertThrows(IllegalArgumentException.class, () -> RandomStringUtils.random(8, 32, 65, true, false));
     }
 
     /**
@@ -233,10 +200,9 @@ public class RandomStringUtilsTest {
             }
         }
         for (int i = 0; i < testChars.length; i++) {
-            if (!found[i]) {
-                fail("alphanumeric character not generated in 1000 attempts: "
-                   + testChars[i] +" -- repeated failures indicate a problem ");
-            }
+            assertTrue(found[i],
+                    "alphanumeric character not generated in 1000 attempts: " +
+                            testChars[i] + " -- repeated failures indicate a problem ");
         }
     }
 
@@ -246,7 +212,7 @@ public class RandomStringUtilsTest {
      */
     @Test
     public void testRandomNumeric() {
-        final char[] testChars = {'0','9'};
+        final char[] testChars = {'0', '9'};
         final boolean[] found = {false, false};
         for (int i = 0; i < 100; i++) {
             final String randString = RandomStringUtils.randomNumeric(10);
@@ -257,10 +223,9 @@ public class RandomStringUtilsTest {
             }
         }
         for (int i = 0; i < testChars.length; i++) {
-            if (!found[i]) {
-                fail("digit not generated in 1000 attempts: "
-                   + testChars[i] +" -- repeated failures indicate a problem ");
-            }
+            assertTrue(found[i],
+                    "digit not generated in 1000 attempts: " + testChars[i] +
+                            " -- repeated failures indicate a problem ");
         }
     }
 
@@ -281,10 +246,9 @@ public class RandomStringUtilsTest {
             }
         }
         for (int i = 0; i < testChars.length; i++) {
-            if (!found[i]) {
-                fail("alphanumeric character not generated in 1000 attempts: "
-                   + testChars[i] +" -- repeated failures indicate a problem ");
-            }
+            assertTrue(found[i],
+                    "alphanumeric character not generated in 1000 attempts: " + testChars[i] +
+                            " -- repeated failures indicate a problem ");
         }
     }
 
@@ -305,11 +269,9 @@ public class RandomStringUtilsTest {
             }
         }
         for (int i = 0; i < testChars.length; i++) {
-            if (!found[i]) {
-                fail("ascii character not generated in 1000 attempts: "
-                + (int) testChars[i] +
-                 " -- repeated failures indicate a problem");
-            }
+            assertTrue(found[i],
+                    "ascii character not generated in 1000 attempts: " + (int) testChars[i] +
+                            " -- repeated failures indicate a problem");
         }
     }
 
@@ -324,7 +286,7 @@ public class RandomStringUtilsTest {
         for (int i = 0; i < 1000; i++) {
             final String s = RandomStringUtils.randomAscii(expectedMinLengthInclusive, expectedMaxLengthExclusive);
             assertThat("within range", s.length(), allOf(greaterThanOrEqualTo(expectedMinLengthInclusive), lessThanOrEqualTo(expectedMaxLengthExclusive - 1)));
-            assertTrue(s, s.matches(pattern));
+            assertTrue(s.matches(pattern), s);
 
             if (s.length() < minCreatedLength) {
                 minCreatedLength = s.length();
@@ -349,7 +311,7 @@ public class RandomStringUtilsTest {
         for (int i = 0; i < 1000; i++) {
             final String s = RandomStringUtils.randomAlphabetic(expectedMinLengthInclusive, expectedMaxLengthExclusive);
             assertThat("within range", s.length(), allOf(greaterThanOrEqualTo(expectedMinLengthInclusive), lessThanOrEqualTo(expectedMaxLengthExclusive - 1)));
-            assertTrue(s, s.matches(pattern));
+            assertTrue(s.matches(pattern), s);
 
             if (s.length() < minCreatedLength) {
                 minCreatedLength = s.length();
@@ -374,7 +336,7 @@ public class RandomStringUtilsTest {
         for (int i = 0; i < 1000; i++) {
             final String s = RandomStringUtils.randomAlphanumeric(expectedMinLengthInclusive, expectedMaxLengthExclusive);
             assertThat("within range", s.length(), allOf(greaterThanOrEqualTo(expectedMinLengthInclusive), lessThanOrEqualTo(expectedMaxLengthExclusive - 1)));
-            assertTrue(s, s.matches(pattern));
+            assertTrue(s.matches(pattern), s);
 
             if (s.length() < minCreatedLength) {
                 minCreatedLength = s.length();
@@ -399,7 +361,7 @@ public class RandomStringUtilsTest {
         for (int i = 0; i < 1000; i++) {
             final String s = RandomStringUtils.randomGraph(expectedMinLengthInclusive, expectedMaxLengthExclusive);
             assertThat("within range", s.length(), allOf(greaterThanOrEqualTo(expectedMinLengthInclusive), lessThanOrEqualTo(expectedMaxLengthExclusive - 1)));
-            assertTrue(s, s.matches(pattern));
+            assertTrue(s.matches(pattern), s);
 
             if (s.length() < minCreatedLength) {
                 minCreatedLength = s.length();
@@ -424,7 +386,7 @@ public class RandomStringUtilsTest {
         for (int i = 0; i < 1000; i++) {
             final String s = RandomStringUtils.randomNumeric(expectedMinLengthInclusive, expectedMaxLengthExclusive);
             assertThat("within range", s.length(), allOf(greaterThanOrEqualTo(expectedMinLengthInclusive), lessThanOrEqualTo(expectedMaxLengthExclusive - 1)));
-            assertTrue(s, s.matches(pattern));
+            assertTrue(s.matches(pattern), s);
 
             if (s.length() < minCreatedLength) {
                 minCreatedLength = s.length();
@@ -449,7 +411,7 @@ public class RandomStringUtilsTest {
         for (int i = 0; i < 1000; i++) {
             final String s = RandomStringUtils.randomPrint(expectedMinLengthInclusive, expectedMaxLengthExclusive);
             assertThat("within range", s.length(), allOf(greaterThanOrEqualTo(expectedMinLengthInclusive), lessThanOrEqualTo(expectedMaxLengthExclusive - 1)));
-            assertTrue(s, s.matches(pattern));
+            assertTrue(s.matches(pattern), s);
 
             if (s.length() < minCreatedLength) {
                 minCreatedLength = s.length();
@@ -474,22 +436,32 @@ public class RandomStringUtilsTest {
         final String set = "abc";
         final char[] chars = set.toCharArray();
         String gen = "";
-        final int[] counts = {0,0,0};
-        final int[] expected = {200,200,200};
+        final int[] counts = {0, 0, 0};
+        final int[] expected = {200, 200, 200};
         for (int i = 0; i< 100; i++) {
-           gen = RandomStringUtils.random(6,chars);
-           for (int j = 0; j < 6; j++) {
-               switch (gen.charAt(j)) {
-                   case 'a': {counts[0]++; break;}
-                   case 'b': {counts[1]++; break;}
-                   case 'c': {counts[2]++; break;}
-                   default: {fail("generated character not in set");}
-               }
-           }
+            gen = RandomStringUtils.random(6, chars);
+            for (int j = 0; j < 6; j++) {
+                switch (gen.charAt(j)) {
+                    case 'a': {
+                        counts[0]++;
+                        break;
+                    }
+                    case 'b': {
+                        counts[1]++;
+                        break;
+                    }
+                    case 'c': {
+                        counts[2]++;
+                        break;
+                    }
+                    default: {
+                        fail("generated character not in set");
+                    }
+                }
+            }
         }
         // Perform chi-square test with df = 3-1 = 2, testing at .001 level
-        assertTrue("test homogeneity -- will fail about 1 in 1000 times",
-            chiSquare(expected,counts) < 13.82);
+        assertTrue(chiSquare(expected, counts) < 13.82, "test homogeneity -- will fail about 1 in 1000 times");
     }
 
     /**
@@ -511,7 +483,7 @@ public class RandomStringUtilsTest {
      * Checks if the string got by {@link RandomStringUtils#random(int)}
      * can be converted to UTF-8 and back without loss.
      *
-     * @see <a href="http://issues.apache.org/jira/browse/LANG-100">LANG-100</a>
+     * @see <a href="https://issues.apache.org/jira/browse/LANG-100">LANG-100</a>
      */
     @Test
     public void testLang100() {
@@ -525,8 +497,9 @@ public class RandomStringUtilsTest {
         for (int i=0; i < orig.length() && i < copy.length(); i++) {
             final char o = orig.charAt(i);
             final char c = copy.charAt(i);
-            assertEquals("differs at " + i + "(" + Integer.toHexString(new Character(o).hashCode()) + "," +
-            Integer.toHexString(new Character(c).hashCode()) + ")", o, c);
+            assertEquals(o, c,
+                    "differs at " + i + "(" + Integer.toHexString(Character.valueOf(o).hashCode()) + "," +
+                            Integer.toHexString(Character.valueOf(c).hashCode()) + ")");
         }
         // compare length also
         assertEquals(orig.length(), copy.length());
@@ -539,11 +512,9 @@ public class RandomStringUtilsTest {
      * Test for LANG-1286. Creates situation where old code would
      * overflow a char and result in a code point outside the specified
      * range.
-     *
-     * @throws Exception
      */
     @Test
-    public void testCharOverflow() throws Exception {
+    public void testCharOverflow() {
         final int start = Character.MAX_VALUE;
         final int end = Integer.MAX_VALUE;
 
@@ -559,7 +530,7 @@ public class RandomStringUtilsTest {
 
         final String result = RandomStringUtils.random(2, start, end, false, false, null, fixedRandom);
         final int c = result.codePointAt(0);
-        assertTrue(String.format("Character '%d' not in range [%d,%d).", c, start, end), c >= start && c < end);
+        assertTrue(c >= start && c < end, String.format("Character '%d' not in range [%d,%d).", c, start, end));
     }
 }
 
